--- a/src/html/school/center/index.html
+++ b/src/html/school/center/index.html
@@ -101,7 +101,7 @@
                             </dd>
                         </dl>
                     </div>
-                    <div class="school-news">
+                    <div class="school-news1">
                         <h4 class="block-title">新闻资讯</h4>
                         <div class="new-plate clearfix">
                             <ul class="new-block fl">
@@ -134,7 +134,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="school-history">
+                    <div class="school-history1">
                         <h4 class="block-title">学校印象</h4>
                         <ol class="item-list clearfix">
                             <li>
